--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/item-styles.css">
   <link rel="stylesheet" href="assets/css/card-styles.css">
+  <link rel="stylesheet" href="assets/css/listing-styles.css">
+  <link rel="stylesheet" href="assets/css/select-styles.css">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
