estilos de formulario

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/css/card-styles.css">
   <link rel="stylesheet" href="assets/css/listing-styles.css">
   <link rel="stylesheet" href="assets/css/select-styles.css">
+  <link rel="stylesheet" href="assets/css/form-styles.css">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
